# edgeComputing_gurobi

./: CMakeLists.txt  Makefile  README.md  dfscode.cpp  dfscode.h  gurobi_EC.cpp  gurobi_c++.h  query_decoposition.cpp
input/: matrix_e.txt  vector_c.txt  vector_w.txt
